--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -26,7 +26,21 @@
       </p>
 
     </div>
+      
+      
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<div class="w3-container w3-xlarge w3-padding">
+    <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+    <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
+    <i class="fa fa-snapchat w3-hover-text-yellow"></i>
+    <i class="fa fa-pinterest-p w3-hover-text-red"></i>
+    <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+    <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+</div>
   </div>
 
   <div id="switcher"></div>
