--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -14,6 +14,7 @@
             <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a>
           {% endfor %}
         {% else %}
+          Rúben André Barreiro
           {{ page.title }}
         {% endif %}
 
