--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -14,7 +14,7 @@
             <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a>
           {% endfor %}
         {% else %}
-          <img src="imgs/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="200" width="200">
+          <img src="../imgs/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="200" width="200">
           Rúben André Barreiro
           <br>
           <br>
