--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -57,6 +57,9 @@
       </p>
 
     <hr/>
+    
+    Social
+        <hr/>
         
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
