--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -16,36 +16,33 @@
         {% else %}
           <br>
           <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
           <img src="../imgs/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="160" width="160">
           <br>
           Rúben André Barreiro
           <br>
-          <p>
-                ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
-              <br>
-                💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician | 
-              <br>
-                💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
-              <br>
-                ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
-              <br>
-                🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted
-          </p>
-          <hr/>
+        </div>
+        
+        <p>
+            ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
           <br>
+            💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician | 
           <br>
+            💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
           <br>
-          {{ page.title }}
+            ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
+          <br>
+            🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted
+         </p>
+        
+        <hr/>
+        
+        
+        <br>
+        <br>
+        <br>
+          
+        
+        {{ page.title }}
         {% endif %}
 
       </div>
@@ -59,25 +56,28 @@
       </p>
 
     <hr/>
-    <br>
-    <br>
-    Social
-    <hr/>
         
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <br>
+    <br>
+    
+    <!-- Social Links -->
+        Social
+        <hr/>
 
-    <div class="w3-container w3-xlarge w3-padding">
-        <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
-        <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
-        <i class="fa fa-snapchat w3-hover-text-yellow"></i>
-        <i class="fa fa-pinterest-p w3-hover-text-red"></i>
-        <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-        <i class="fa fa-linkedin w3-hover-text-indigo"></i>
-    </div>
-    <hr/>    
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+        
+        <div class="w3-container w3-xlarge w3-padding">
+            <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+            <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
+            <i class="fa fa-snapchat w3-hover-text-yellow"></i>
+            <i class="fa fa-pinterest-p w3-hover-text-red"></i>
+            <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+            <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+        </div>
+        
+        <hr/>
+    <!-- End -->
+    
     </div>
   </div>
 
