--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -16,7 +16,7 @@
         {% else %}
           <br>
           <br>
-          <img src="../imgs/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="160" width="160">
+          <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="160" width="160">
           <br>
           Rúben André Barreiro
           <br>
@@ -41,9 +41,10 @@
         <br>
         <br>
           
-        
-        {{ page.title }}
-        {% endif %}
+        <div class="heading">
+            {{ page.title }}
+            {% endif %}
+        </div>
 
       </div>
         
@@ -61,7 +62,9 @@
     <br>
     
     <!-- Social Links -->
-        Social
+        <div class="heading">
+            Social
+        </div>
         <hr/>
 
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
