--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -4,85 +4,75 @@
   <aside class="sidebar" role="note" style="background-image: url({{ site.images | relative_url }}/bg.svg)">
 {% endif %}
 
-  <div class="cover">
-    <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="160" width="160">
-    <br>
-        
+  <div class="cover">    
     <div class="cover-text">
-        {% if page.tags %}
-          {% for tag in page.tags %}
-          <div class="heading">
-              <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a>
-          </div>
-          {% endfor %}
-        {% else %}
         <div class="heading">
-          Rúben André Barreiro
             
-          {{ page.title }}
-        {% endif %}
-     
-        <br>
-        
-        </div>
-        
-        <p>
-            ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
-          <br>
-            💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician | 
-          <br>
-            💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
-          <br>
-            ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
-          <br>
-            🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted
-        </p>
-        
-        <hr/>
-        
-        <br>
-        <br>
-          
-        <div class="heading">
-        </div>
+            <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="160" width="160">
+            <br>
+            {% if page.tags %}
+            {% for tag in page.tags %}
+            <div class="heading">
+              <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a>
+            </div>
+            {% endfor %}
+            {% else %}
+                Rúben André Barreiro
+                {{ page.title }}
+            {% endif %}
+            <br>
 
-      </div>
-        
-      <hr/>
-        
-      <p>
-        {% if page.summary %}
-          {{ page.summary }}
-        {% endif %}
-      </p>
+            <p>
+                <font size="2">
+                    ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
+                  <br>
+                    💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician | 
+                  <br>
+                    💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
+                  <br>
+                    ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
+                  <br>
+                    🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted
+                </font>
+            </p>
+            
+            <hr/>
+            
+            <br>
+            
+            <p>
+                <font size="3">
+                    {% if page.summary %}
+                      {{ page.summary }}
+                    {% endif %}
+                </font>
+            </p>
 
-    <hr/>
-        
-    <br>
-    <br>
-    
-    <!-- Social Links -->
-        <div class="heading">
+            <hr/>
+
+            <br>
+
             Social
-        </div>
-        <hr/>
+            
+            <hr/>
 
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+            <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
         
-        <div class="w3-container w3-xlarge w3-padding">
-            <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
-            <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
-            <i class="fa fa-snapchat w3-hover-text-yellow"></i>
-            <i class="fa fa-pinterest-p w3-hover-text-red"></i>
-            <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-            <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+            <div class="w3-container w3-xlarge w3-padding">
+                <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+                <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
+                <i class="fa fa-snapchat w3-hover-text-yellow"></i>
+                <i class="fa fa-pinterest-p w3-hover-text-red"></i>
+                <i class="fa fa-twitter w3-hover-text-light-blue"></i>
+                <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+            </div>
+        
+            <hr/>
+            
         </div>
-        
-        <hr/>
-    <!-- End -->
-    
     </div>
-  </div>
+</div>
+      
+<div id="switcher"></div>
 
-  <div id="switcher"></div>
 </aside>
