--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -7,6 +7,7 @@
   <div class="cover">
 
     <div class="cover-text">
+        Rúben André Barreiro
       <div class="heading">
 
         {% if page.tags %}
@@ -16,6 +17,7 @@
         {% else %}
           {{ page.title }}
         {% endif %}
+        <hr/>
 
       </div>
 
