--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -7,7 +7,10 @@
   <div class="cover">
 
     <div class="cover-text">
-        Rúben André Barreiro
+      <div class="myname">
+          Rúben André Barreiro
+      </div>    
+        
       <div class="heading">
 
         {% if page.tags %}
