--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -9,7 +9,21 @@
     <div class="cover-text">
       <div class="myname">
           Rúben André Barreiro
-      </div>    
+      </div>
+        
+      <hr/>
+      <div class="shortbio">
+          ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
+          <br>
+          💻 Computer Science Engineer | 👨💻 IT/IS Programmer & Technician | 
+          <br>
+          💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
+          <br>
+          ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
+          <br>
+          🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted  
+      </div>
+      <hr/>
         
       <div class="heading">
 
