--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -15,7 +15,7 @@
       <div class="shortbio">
           ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
           <br>
-          💻 Computer Science Engineer | 👨💻 IT/IS Programmer & Technician | 
+          💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
           💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
           <br>
