--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -52,7 +52,7 @@ h6 { font-size: .6em; }
 .shortbio {
   font-size: .5em;
   text-transform: uppercase;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: .67em 0;
   a:link, a:hover, a:focus, a:visited {
     color: #fff;
