--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -13,15 +13,19 @@
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT | 🎓 BSc @ FCT NOVA
+          ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT
+          <br>
+          🎓 BSc @ FCT NOVA
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
-          💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner 
+          💼 Entrepreneur | 👥 Influencer | 💡 Promoter
           <br>
-          ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete 
+          👔 Fashioner | ✏️ Designer | 📸 Photographer | 🎥 Producer
           <br>
-          🚶 Model | 🤴 Lifestyle | ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted  
+          🏋️ Athlete | 🚶 Model | 🤴 Lifestyle
+          <br>
+          ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted  
       </div>
       <hr/>
         
