--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -13,9 +13,11 @@
         
       <hr/>
       <div class="shortbio">
+          🇵🇹 🇧🇷 Portuguese Soul with Brazilian Roots
+          <br>
           ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT
           <br>
-          🎓 BSc @ FCT NOVA
+          🎓 BSc @ FCT NOVA, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
