--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -58,6 +58,7 @@
       </div>
         
       <hr/>
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
       <div class="w3-container w3-xlarge w3-padding">
           <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
           <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-purple"></i></a>
