--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -8,8 +8,7 @@
     
     <div class="cover-text">
       
-      <br>
-      <br>
+      <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="100" width="100">
         
       <div class="myname">
           Rúben André Barreiro
