--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -22,13 +22,9 @@
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
-          💼 Entrepreneur | 👥 Influencer | 💡 Promoter
+          💼 Entrepreneur | 👥 Influencer | 💡 Promoter | 👔 Fashioner
           <br>
-          👔 Fashioner | ✏️ Designer | 📸 Photographer | 🎥 Producer
-          <br>
-          🏋️ Athlete | 🚶 Model | 🤴 Lifestyle
-          <br>
-          ✈️ Travel Enthusiast | 😂 Humorist | 🎵 Music Addicted  
+          ✏️ Designer | 📸 Photographer | 🎥 Producer | 🏋️ Athlete | 🚶 Model
       </div>
       <hr/>
     
