--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -72,7 +72,7 @@
           <i class="fa fa-pinterest-p w3-hover-text-red"></i>
           <i class="fa fa-twitter w3-hover-text-light-blue"></i>
           <i class="fa fa-linkedin w3-hover-text-indigo"></i>
-          <i class="fa fa-email w3-hover-text-grey"></i>
+          <i class="fa fa-mail w3-hover-text-grey"></i>
           <i class="fa fa-github w3-hover-text-black"></i>
           
       </div>
