--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -71,10 +71,11 @@
           <i class="fa fa-snapchat w3-hover-text-yellow"></i>
           <i class="fa fa-pinterest-p w3-hover-text-red"></i>
           <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-          <i class="fa fa-linkedin w3-hover-text-indigo"></i>
+          <i class="fa fa-linkedin w3-hover-text-blue"></i>
           <i class="fa fa-github w3-hover-text-black"></i>
           <i class="fa fa-envelope w3-hover-text-grey"></i>
           <i class="fa fa-skype w3-hover-text-cyan"></i>
+          <i class="fa fa-500px w3-hover-text-white"></i>
           
       </div>
       <hr/>
