--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -75,7 +75,7 @@
           <i class="fa fa-github w3-hover-text-black"></i>
           <i class="fa fa-envelope w3-hover-text-grey"></i>
           <i class="fa fa-skype w3-hover-text-cyan"></i>
-          <i class="fa fa-500px w3-hover-text-white"></i>
+          <i class="fa fa-500px w3-hover-text-light-grey"></i>
           
       </div>
       <hr/>
