--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -76,6 +76,11 @@
           <i class="fa fa-envelope w3-hover-text-grey"></i>
           <i class="fa fa-skype w3-hover-text-cyan"></i>
           <i class="fa fa-500px w3-hover-text-light-grey"></i>
+          <i class="fa fa-flickr w3-hover-text-light-purple"></i>
+          <i class="fa fa-youtube w3-hover-text-light-dark-red"></i>
+          <i class="fa fa-tumblr w3-hover-text-indigo"></i>
+          <i class="fa fa-wordpress w3-hover-text-blue"></i>
+          
           
       </div>
       <hr/>
