--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -77,7 +77,7 @@
           <br>
           <i class="fa fa-skype w3-hover-text-cyan"></i>
           <i class="fa fa-google w3-hover-text-red"></i>
-          <i class="fa fa-500px w3-hover-text-light-grey"></i>
+          <i class="fa fa-500px w3-hover-text-grey"></i>
           <i class="fa fa-flickr w3-hover-text-purple"></i>
           <i class="fa fa-youtube w3-hover-text-red"></i>
           <i class="fa fa-tumblr w3-hover-text-indigo"></i>
