--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -67,7 +67,7 @@
         
       <div class="w3-container w3-xlarge w3-padding">
           <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
-          <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orange"></i></a>
+          <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orange-red"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow"></i>
           <i class="fa fa-pinterest-p w3-hover-text-red"></i>
           <i class="fa fa-twitter w3-hover-text-light-blue"></i>
