--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -67,16 +67,14 @@
         
       <div class="w3-container w3-xlarge w3-padding">
           <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
-          <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orangeRed"></i></a>
+          <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orange"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow"></i>
           <i class="fa fa-pinterest-p w3-hover-text-red"></i>
           <i class="fa fa-twitter w3-hover-text-light-blue"></i>
           <i class="fa fa-linkedin w3-hover-text-blue"></i>
           <i class="fa fa-github w3-hover-text-black"></i>
           <i class="fa fa-envelope w3-hover-text-grey"></i>
-          
           <br>
-          
           <i class="fa fa-skype w3-hover-text-cyan"></i>
           <i class="fa fa-google w3-hover-text-red"></i>
           <i class="fa fa-500px w3-hover-text-grey"></i>
