--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -66,12 +66,27 @@
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
         
       <div class="w3-container w3-xlarge w3-padding">
-          <a href="https://www.facebook.com/rubenandrebarreiro"><i class="fa fa-facebook-official w3-hover-text-indigo"></i></a>
+          <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/rubenandrebarreiro/" title="Rúben André Barreiro on LinkedIn"><i class="fa fa-linkedin w3-hover-text-blue" title="Rúben André Barreiro on LinkedIn"></i></a>
+          <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-light-blue" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
+          <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
+          <a target="_blank" href="https://www.instagram.com/ruben.badnewz/" title="Rúben André Barreiro (BadNewz) on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="Rúben André Barreiro (BadNewz) on Instagram"></i></a>
+          <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
+          <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-grey"></i></a>
+          <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
+          
+          
+          <!--
+          
           <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orange"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow"></i>
           <i class="fa fa-pinterest-p w3-hover-text-red"></i>
           <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-          <i class="fa fa-linkedin w3-hover-text-blue"></i>
           <i class="fa fa-github w3-hover-text-black"></i>
           <i class="fa fa-envelope w3-hover-text-grey"></i>
           <br>
@@ -82,7 +97,7 @@
           <i class="fa fa-youtube w3-hover-text-red"></i>
           <i class="fa fa-tumblr w3-hover-text-indigo"></i>
           <i class="fa fa-wordpress w3-hover-text-blue"></i>
-          
+          -->
           
       </div>
       <hr/>
