--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -83,23 +83,16 @@
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-grey"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           
+          <a href="../contacts.md#othersociallinksusernames" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-comments w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
+          
           
           <!--
-          
-          <a href="https://www.instagram.com/ruben.badnewz/"><i class="fa fa-instagram w3-hover-text-orange"></i></a>
-          <i class="fa fa-snapchat w3-hover-text-yellow"></i>
-          <i class="fa fa-pinterest-p w3-hover-text-red"></i>
-          <i class="fa fa-twitter w3-hover-text-light-blue"></i>
-          <i class="fa fa-github w3-hover-text-black"></i>
+            
           <i class="fa fa-envelope w3-hover-text-grey"></i>
           <br>
           <i class="fa fa-skype w3-hover-text-cyan"></i>
           <i class="fa fa-google w3-hover-text-red"></i>
-          <i class="fa fa-500px w3-hover-text-grey"></i>
-          <i class="fa fa-flickr w3-hover-text-purple"></i>
-          <i class="fa fa-youtube w3-hover-text-red"></i>
-          <i class="fa fa-tumblr w3-hover-text-indigo"></i>
-          <i class="fa fa-wordpress w3-hover-text-blue"></i>
+        
           -->
           
       </div>
