--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -83,7 +83,7 @@
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-grey"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           
-          <a href="../contacts.md#othersociallinksusernames" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-comments w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
+          <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-comments w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
           
           
           <!--
