--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -82,9 +82,8 @@
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-grey"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
-          
-          <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-comments w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
-          
+          <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-grey" title="Other Social Links/Usernames"></i></a>
+          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-gold" title="My E-mails"></i></a>
           
           <!--
             
