--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -80,7 +80,7 @@
           <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
           <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
-          <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-grey"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-black"></i></a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
           <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
