--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -8,6 +8,14 @@
     
     <div class="cover-text">
       
+      <script>
+        var path = document.location.pathname;
+        var directory = path.substring(path.indexOf('/'), path.lastIndexOf('/'));  
+        
+        alert(directory);  
+        
+      </script>
+        
       <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
         
       <div class="myname">
