--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -12,7 +12,9 @@
         var path = document.location.pathname;
         var directory = path.substring(path.indexOf('/'), path.lastIndexOf('/'));  
         
-        alert(directory);  
+        alert(directory.split('/'));
+          
+        var assetsImagesPortrait2DDirectory="../../assets/images/Protrait_2D_1.png"
         
       </script>
         
