--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -15,8 +15,8 @@
         var directories = directory.split('/');
         var isPost = false;
           
-        if(directories.size == 3) {
-            alert("tem tamanho 3");
+        if(directories.length == 3) {
+            alert('tem tamanho 3');
             isPost = true;
         }
         
