--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -19,16 +19,21 @@
             isMainTab = false;
         }
         
+        var protrait2DPathSrc = "";
+          
         if(isMainTab) {
-            <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">    
+            protrait2DPathSrc = '../assets/images/Protrait_2D_1.png';    
         }
         else {
-            <img src="../../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
-        } 
+            protrait2DPathSrc = '../../assets/images/Protrait_2D_1.png';
+        }
+        
+        var protrait2DElem = document.getElementById('protrait2D');
+        protrait2DElem.src = protrait2DPathSrc;
       </script>  
         
-    <!--  <img src="../assets/images/Protrait_2D_1.png" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
-        -->
+      <img id="protrait2D" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
+    
       <div class="myname">
           Rúben André Barreiro
       </div>
