--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -28,6 +28,8 @@
             protrait2DPathSrc = '../../assets/images/Protrait_2D_1.png';
         }
         
+        alert(' ');
+          
         var protrait2DElem = document.getElementById('protrait2D');
         protrait2DElem.src = protrait2DPathSrc;
       </script>  
