--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -19,7 +19,7 @@
             isMainTab = false;
         }
         
-        var protrait2DPathSrc = "";
+        var protrait2DPathSrc = '';
           
         if(isMainTab) {
             protrait2DPathSrc = '../assets/images/Protrait_2D_1.png';    
