--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -27,11 +27,11 @@
         else {
             protrait2DPathSrc = '../../assets/images/Protrait_2D_1.png';
         }
-        
-        alert(' ');
           
         var protrait2DElem = document.getElementById('protrait2D');
         protrait2DElem.src = protrait2DPathSrc;
+          
+        alert(protrait2DElem.src);
       </script>  
         
       <img id="protrait2D" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
