--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -34,7 +34,7 @@
         alert(protrait2DElem.src);
       </script>  
         
-      <img id="protrait2D" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
+      <input id="protrait2D" type="image" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
     
       <div class="myname">
           Rúben André Barreiro
