--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -29,6 +29,8 @@
         }
           
         var protrait2DElem = document.getElementById('protrait2D');
+        alert(protrait2DElem);  
+        
         protrait2DElem.src = protrait2DPathSrc;
           
         alert(protrait2DElem.src);
