--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -28,7 +28,7 @@
             protrait2DPathSrc = '../../assets/images/Protrait_2D_1.png';
         }
           
-        var protrait2DElem = document.getElementById('protrait2D');
+        var protrait2DElem = document.getElementById("protrait2D");
         alert(protrait2DElem);  
         
         protrait2DElem.src = protrait2DPathSrc;
@@ -36,7 +36,7 @@
         alert(protrait2DElem.src);
       </script>  
         
-      <input id="protrait2D" type="image" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">
+      <img id="protrait2D"> <!-- type="image" alt="My Bitmoji-Bitstrip's Protrait in 2D" height="120" width="120">-->
     
       <div class="myname">
           Rúben André Barreiro
