--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -7,7 +7,7 @@
   <div class="cover">
     
     <div class="cover-text">
-      
+      <img id="protrait2D">
       <script>
         var path = document.location.pathname;
         var directory = path.substring(path.indexOf('/'), path.lastIndexOf('/'));  
