--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -108,19 +108,12 @@
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
           <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
-          
-          <!--
-            
-          <i class="fa fa-envelope w3-hover-text-grey"></i>
-          <br>
-          <i class="fa fa-skype w3-hover-text-cyan"></i>
-          <i class="fa fa-google w3-hover-text-red"></i>
-        
-          -->
-          
       </div>
       <hr/>
-        
+    
+      <center>
+          <h5>*** Click in the right side of this tab to close it ***</h5>
+      </center>
     </div>
 
   </div>
