--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -53,31 +53,6 @@
       <hr/>
     
       <br>
-    
-    <!--    
-      <div class="heading">
-        {% if page.tags %}
-          {% for tag in page.tags %}
-            <a href="{{ site.baseurl }}/posts/#{{ tag | downcase }}">{{ tag | downcase }}</a>
-          {% endfor %}
-        {% else %}
-          {{ page.title }}
-        {% endif %}
-      </div>
-    
-      <hr/>
-      <div class="sectiondescription">
-          <p>
-            {% if page.summary %}
-              {{ page.summary }}
-            {% endif %}
-          </p>  
-      </div>
-      <hr/>
-      
-      <br>
-    
--->
         
       <div class="heading">
         Social
@@ -112,7 +87,7 @@
       <hr/>
     
       <center>
-          <h5>*** Click in the right side of this tab to close it ***</h5>
+          *** Click in the right side of this tab to close it ***
       </center>
     </div>
 
