--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -78,6 +78,14 @@ h6 { font-size: .6em; }
   }
 }
 
+.sidebarinfo {
+  font-size: .6em;
+  margin: .67em 0;
+  a:link, a:hover, a:focus, a:visited {
+    color: #fff;
+  }
+}
+
 input[type="submit"],
 button {
   border: 0;
