--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -87,7 +87,9 @@
       <hr/>
     
       <center>
-          *** Click in the right side of this tab to close it ***
+          <div class="sidebarinfoinstructions">
+            *** Click in the right side of this tab to close it ***
+          </div>
       </center>
     </div>
 
