--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -78,7 +78,7 @@ h6 { font-size: .6em; }
   }
 }
 
-.sidebarinfo {
+.sidebarinfoinstructions {
   font-size: .6em;
   margin: .67em 0;
   a:link, a:hover, a:focus, a:visited {
