--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -89,6 +89,8 @@
       <center>
           <div class="sidebarinfoinstructions">
             *** Click in the right side of this tab to close it ***
+            <br>
+            © 2018 Rúben André Barreiro - GitHub's Page/Personal Blog - All rights reserved
           </div>
       </center>
     </div>
