--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -90,7 +90,9 @@
           <div class="sidebarinfoinstructions">
             *** Click in the right side of this tab to close it ***
             <br>
-            © 2018 Rúben André Barreiro - GitHub's Page/Personal Blog - All rights reserved
+            © 2018 Rúben André Barreiro - GitHub's Page/Personal Blog
+            <br>
+            All rights reserved
           </div>
       </center>
     </div>
