--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -35,7 +35,7 @@
       </script>
     
       <div class="myname">
-          Rúben André Barreiro
+          <a href="https://rubenandrebarreiro.github.io/">Rúben André Barreiro</a>
       </div>
         
       <hr/>
@@ -88,7 +88,7 @@
     
       <center>
           <div class="sidebarinfoinstructions">
-            *** Click in the right side of this tab to close it ***
+            *** Click in the right side of this tab, where appears a cross, to close it ***
             <br>
             © 2018 Rúben André Barreiro - GitHub's Page/Personal Blog
             <br>
