--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -88,7 +88,7 @@
     
       <center>
           <div class="sidebarinfoinstructions">
-            *** Click in the right side of this tab, where appears a cross, to open/close it ***
+            *** Click in the right side of this tab, to open/close it ***
             <br>
             © 2018 Rúben André Barreiro - GitHub's Page/Personal Blog
             <br>
