--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -71,7 +71,7 @@
           <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
           <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
-          <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-stackoverflow w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
+          <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-stack-overflow w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
           
           <br>
