--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -63,6 +63,8 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+
         
       <div class="w3-container w3-xlarge w3-padding">
           <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
@@ -72,7 +74,7 @@
           <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
           <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
-          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="fa fa-researchgate w3-hover-text-green" title="Rúben André Barreiro on ResearchGate"></i></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-green" title="Rúben André Barreiro on ResearchGate"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
           
           <br>
