--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -74,7 +74,7 @@
           <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
           <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
-          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-light-green" title="Rúben André Barreiro on ResearchGate"></i></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
           
           <br>
