--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,3 +1,16 @@
+<style>
+.icon-discord:before {
+  content: "\e900";
+  color: #7289da;
+}
+
+.icon-vsco:before {
+  content: "\e901";
+}
+</style>
+
+<link rel="stylesheet" href="/apps-brands-social-icons/style.css">
+
 {% if page.bg %}
   <aside class="sidebar" role="note" style="background-image: url({{ site.images | relative_url }}/{{ page.bg }})">
 {% else %}
@@ -84,6 +97,9 @@
           <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-black"></i></a>
+          
+          <a target="_blank" href="someLink"><span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px; color: black"></span></a>
+          
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
           <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
