--- a/apps-brands-social-icons/style.css
+++ b/apps-brands-social-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?h5xwkh');
-  src:  url('fonts/icomoon.eot?h5xwkh#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?h5xwkh') format('truetype'),
-    url('fonts/icomoon.woff?h5xwkh') format('woff'),
-    url('fonts/icomoon.svg?h5xwkh#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?gml6r0');
+  src:  url('fonts/icomoon.eot?gml6r0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?gml6r0') format('truetype'),
+    url('fonts/icomoon.woff?gml6r0') format('woff'),
+    url('fonts/icomoon.svg?gml6r0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-vsco:before {
+  content: "\e901";
+}
 .icon-discord:before {
   content: "\e900";
   color: #7289da;
