--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -98,7 +98,11 @@
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-black"></i></a>
           
-          <a target="_blank" href="someLink" style="text-decoration: none"><span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px"></span></a>
+          <a target="_blank" href="someLink" style="text-decoration: none"
+             onmouseover="this.style.color='#FFFFFF'"
+             onmouseout="this.style.color='#000000'">
+            <span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px"></span>
+          </a>
           
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
