--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -99,8 +99,8 @@
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-black"></i></a>
           
           <a target="_blank" href="someLink" style="text-decoration: none"
-             onmouseover="this.style.color='#FFFFFF'"
-             onmouseout="this.style.color='#000000'">
+             onmouseover="this.style.color='#000000'"
+             onmouseout="this.style.color='#FFFFFF'">
             <span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px"></span>
           </a>
           
