--- a/projects/colleges-universities-icons/style.css
+++ b/projects/colleges-universities-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?y2uw9q');
-  src:  url('fonts/icomoon.eot?y2uw9q#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?y2uw9q') format('truetype'),
-    url('fonts/icomoon.woff?y2uw9q') format('woff'),
-    url('fonts/icomoon.svg?y2uw9q#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?xh4tlb');
+  src:  url('fonts/icomoon.eot?xh4tlb#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?xh4tlb') format('truetype'),
+    url('fonts/icomoon.woff?xh4tlb') format('woff'),
+    url('fonts/icomoon.svg?xh4tlb#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
