--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -97,7 +97,7 @@
               <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
               <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
               <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
-              <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-black"></i></a>
+              <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-dark-gray"></i></a>
               <a target="_blank" href="someLink" style="text-decoration: none"
                  onmouseover="this.style.color='#848484'"
                  onmouseout="this.style.color='#FFFFFF'">
